# project-W-runner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  COPYING.md  Dockerfile  Dockerfile.dummy  FILESTRUCTURE.md  README.md  TODO.md  config.yml  flake.nix  pyproject.toml  run.sh
.github/workflows/: ci.yml  docker.yml  pypi.yml
doc/: api.rst  conf.py  index.rst
nix/: module.nix  overlay.nix  shell.nix
nix/pkgs/: project-W-runner.nix  pyaml-env.nix
project_W_runner/: __init__.py  __main__.py  config.py  logger.py  runner.py  utils.py  utils_dummy.py  utils_whisperx.py
project_W_runner/models/: base.py  internal.py  request_data.py  response_data.py  settings.py
tests/: test_cli.py  test_project_W_runner.py
