# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools >=61",
    #we need larger than 9 to get PR https://github.com/pypa/setuptools-scm/pull/1154
    "setuptools_scm >= 9",
]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for project_W_runner's version
[project]
name = "project_W_runner"
description = "Add short description here"
readme = "README.md"
maintainers = [
    { name = "Julian Partanen", email = "your@email.com"},
    { name = "Markus Everling", email = "your@email.com" },
]
dynamic = ["version"]
requires-python = ">=3.11"
license = { text = "AGPLv3" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
dependencies = [
    "httpx",
    "click",
    "pydantic",
    "platformdirs",
    "pyaml_env",
]

[project.optional-dependencies]
not_dummy = [
    "whisperx>=3.3.3",
    "hf_xet", #for faster huggingface model downloads at startup
]
tests = [
    "pytest",
    "pytest-cov",
]

# Command line scripts installed as part of the installation
[project.scripts]
project_W_runner = "project_W_runner.__main__:main"

# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = [
    "project_W_runner",
]

# Configure setuptools_scm, which extracts the version number from
# the version control system. For more information see its documentation:
# https://github.com/pypa/setuptools_scm
[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "node-and-date"
write_to = "project_W_runner/_version.py"

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
